fixed alignment

--- a/Responsive Web/Tasks/TASK-1 Responsive layout and typography/Task 1.scss
+++ b/Responsive Web/Tasks/TASK-1 Responsive layout and typography/Task 1.scss
@@ -266,6 +266,7 @@ body {
         h2{
             font-size: 2rem;
         }
+
         .sect1 h2{
             width: 70%;
             
@@ -359,6 +360,9 @@ body {
     // Small and Large Mobile Page
     @media (min-width: $small-mobile) and (max-width: $tablet) {
         padding: $spacing-large;
+        .sect1{
+            align-items: center;
+        }
         .sect1 h2{
             width: 100%;
         }
